# alphacube

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
alphacube/: __init__.py  _evaluator.py  _validator.py  cli.py  core.py  env.py  model.py  search.py  solver.py  utils.py
tests/: conftest.py  test__evaluator.py  test_alphacube_core.py  test_alphacube_eval.py  test_env.py  test_search.py
