[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alphacube"
version = "0.1.1"
description = "A powerful & flexible Rubik's Cube solver"
readme = "README.md"  # Tell pip how to find the readme
requires-python = ">=3.6"
authors = [{name = "Kyo Takano"}]
license = {file = "LICENSE"}
keywords = ["rubiks-cube", "solver", "ai"]  # Optional
dependencies = [
    "torch>=2.0.1",
    "numpy>=1.23.3",
    "rich>=13.0.1",
    "pydantic>=2.0.3",
    "requests>=2.28.2"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[project.urls]
"Documentation" = "https://alphacube.dev/docs/index.html"
"Source" = "https://github.com/kyo-takano/alphacube"

[project.scripts]
alphacube = "alphacube:cli"

[tool.ruff]
line-length = 120
